# tx-lsp

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_api.py  test_app.py  test_discovery.py  test_features.py  test_lsp_integration.py  test_main.py  test_server.py  test_utils.py  test_workspace.py  testlang_server.py
tx_lsp/: __init__.py  __main__.py  discovery.py  server.py  utils.py  workspace.py
tx_lsp/api/: AGENTS.md  app.py  models.py  routes.py
tx_lsp/features/: AGENTS.md  completion.py  definition.py  diagnostics.py  hover.py  references.py  semantic_tokens.py  symbols.py
